# here_is_johnny_v

./: CMakeLists.txt  README.md  main.c
include/crypto/: crypto.h
include/data_noise/: data_noise.h
include/inotify_observer/: inotify_observer.h  inotify_subject.h
include/packet_builder/: packet_builder.h
include/upkd/: auth.h  data_processor.h  db.h  ufw_log_entry.h  upkd.h
include/upkd/commands/: file_transfer_commands.h  fs_monitor_commands.h  system_commands.h
include/utils/: file_operations.h
src/crypto/: crypto.c
src/data_noise/: data_noise.c
src/inotify_observer/: inotify_observer.c  inotify_subject.c
src/packet_builder/: packet_builder.c
src/upkd/: auth.c  data_processor.c  db.c  ufw_log_entry.c  upkd.c
src/upkd/commands/: file_transfer_commands.c  fs_monitor_commands.c  system_commands.c
src/utils/: file_operations.c
